# speechless

./: .gitignore  CLAUDE.md  Makefile  Makefile.env  README.md  finetune.py  infer.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
api/: app.py  client.py  server.py  settings.py
api/llms/: __init__.py  base_llm.py  exllama.py  huggingface.py  vllm.py
api/protocol/: openai.py  sampling_params.py
coding/scripts/: build_gguf.sh  merge_sft.sh  (+6 more)
config/: deepspeed-13b-stage2.json
eval/: async_openai.py  bigcode_eval.py  bigcode_offical_exec.sh  humaneval_gen.py  humaneval_gen_vllm.py  llm_api.py  lm_eval.py  lmeval.py  multiple.py  multiple_gen.py  run_bigcode_eval.sh  run_bigcode_eval_gen.sh  run_human_eval_gen.sh  run_humaneval_gen.sh  run_multiple.sh  run_multiple_gen.sh
finetune/: finetune_dialog.py
patches/: flash_attn_monkey_patch.py  long_lora_monkey_patch.py  neftune_monkey_patch.py  rerope_monkey_patch.py  sliding_window_monkey_patch.py
scripts/: build_awq.py  finetune_speechless_codellam_13b.sh  finetune_speechless_codellam_34b.sh  finetune_speechless_mistral_7b_v0.1.sh  full_finetune_speechless_codellam_34b.sh  generate_speechless_coding_v0.1_dataset.py  generate_speechless_coding_v0.2_dataset.py  generate_speechless_reasoning_v0.1_dataset.py  generate_speechless_reasoning_v0.2_dataset.py  generate_speechless_reasoning_v0.3_small_dataset.py  generate_speechless_reasoning_v0.4_dataset.py  groq_completions.py  hf_download.py  hf_upload.py  llamacpp-generate  llamacpp-generate.env  prepare_train_data.py  quantize_gguf.sh  quantlize_gguf.sh  run_api_server.sh  run_lmeval.sh  save_hf_model_fp16.py
speechless/: __version__.py
unsloth/: README.md  mini_train.py
(+752 files in other folders)
