[tool.poetry]
name = "speechless"
version = "0.3.0"
description = ""
authors = ["uukuguy <uukuguy@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.1+cu118"
transformers = "^4.34.0"
flash-attn = "2.23.0"

[tool.poetry.group.dev.dependencies]
fschat = "^0.2.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
