[tool.poetry]
name = "speechless"
version = "0.8.0"
description = ""
authors = ["uukuguy <uukuguy@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
#torch = "2.0.1+cu118"
peft = "^0.5.0"
transformers = "^4.36.0"
bitsandbytes = "^0.41.1"
tokenizers = "^0.14.0"
datasets = "^2.14.4"
accelerate = "^0.23.0"
#flash-attn = "2.23.0"

[tool.poetry.group.dev.dependencies]
fschat = "^0.2.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
